--- a/ruedasLocas/app/src/main/res/layout-land/activity_main.xml
+++ b/ruedasLocas/app/src/main/res/layout-land/activity_main.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/fondo"
-    android:gravity="center">
+    android:gravity="center"
+    tools:context=".MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
